[gd_scene load_steps=63 format=3 uid="uid://c4gjyw0iwwq5p"]

[ext_resource type="Script" uid="uid://b1g1qwcjkx78p" path="res://scripts/boss_lvl_2.gd" id="1_i7mbf"]
[ext_resource type="Texture2D" uid="uid://cifxxmdk3yjqq" path="res://asset/Sprites/Boss/BossIce/frost_guardian_free_192x128_SpriteSheet.png" id="2_3axp0"]
[ext_resource type="AudioStream" uid="uid://dvd7l71jxdy2e" path="res://asset/Sounds/boss2_walk.mp3" id="3_3axp0"]
[ext_resource type="AudioStream" uid="uid://b6dx6fw2wbp6" path="res://asset/Sounds/boss2_attack.mp3" id="4_xdk3b"]
[ext_resource type="AudioStream" uid="uid://cgmhpo4hft2jj" path="res://asset/Sounds/boss2_die.mp3" id="5_8gu7s"]
[ext_resource type="AudioStream" uid="uid://cq81srbpifjj1" path="res://asset/Sounds/stone-falling-in-water-288559 (mp3cut.net).mp3" id="6_yk4fw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xdk3b"]
atlas = ExtResource("2_3axp0")
region = Rect2(768, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gu7s"]
atlas = ExtResource("2_3axp0")
region = Rect2(960, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk4fw"]
atlas = ExtResource("2_3axp0")
region = Rect2(1152, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s66oj"]
atlas = ExtResource("2_3axp0")
region = Rect2(1344, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lr5v"]
atlas = ExtResource("2_3axp0")
region = Rect2(1536, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2482m"]
atlas = ExtResource("2_3axp0")
region = Rect2(1728, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_htib0"]
atlas = ExtResource("2_3axp0")
region = Rect2(1920, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8rup"]
atlas = ExtResource("2_3axp0")
region = Rect2(2112, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydx6i"]
atlas = ExtResource("2_3axp0")
region = Rect2(2304, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_omjrm"]
atlas = ExtResource("2_3axp0")
region = Rect2(2496, 256, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c6t7"]
atlas = ExtResource("2_3axp0")
region = Rect2(0, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0b2p"]
atlas = ExtResource("2_3axp0")
region = Rect2(192, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xij11"]
atlas = ExtResource("2_3axp0")
region = Rect2(384, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yfwp"]
atlas = ExtResource("2_3axp0")
region = Rect2(576, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_55c7n"]
atlas = ExtResource("2_3axp0")
region = Rect2(768, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ohd2"]
atlas = ExtResource("2_3axp0")
region = Rect2(960, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky2f6"]
atlas = ExtResource("2_3axp0")
region = Rect2(1152, 384, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0jr1"]
atlas = ExtResource("2_3axp0")
region = Rect2(0, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq4hd"]
atlas = ExtResource("2_3axp0")
region = Rect2(192, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l6np"]
atlas = ExtResource("2_3axp0")
region = Rect2(384, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqcv3"]
atlas = ExtResource("2_3axp0")
region = Rect2(576, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcxfs"]
atlas = ExtResource("2_3axp0")
region = Rect2(768, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsjf2"]
atlas = ExtResource("2_3axp0")
region = Rect2(960, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnmjr"]
atlas = ExtResource("2_3axp0")
region = Rect2(1152, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjf45"]
atlas = ExtResource("2_3axp0")
region = Rect2(1344, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x1p8"]
atlas = ExtResource("2_3axp0")
region = Rect2(1536, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8lgg"]
atlas = ExtResource("2_3axp0")
region = Rect2(1728, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bye16"]
atlas = ExtResource("2_3axp0")
region = Rect2(1920, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdyb8"]
atlas = ExtResource("2_3axp0")
region = Rect2(2112, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2orsc"]
atlas = ExtResource("2_3axp0")
region = Rect2(2304, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lklp"]
atlas = ExtResource("2_3axp0")
region = Rect2(2496, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv2t7"]
atlas = ExtResource("2_3axp0")
region = Rect2(2688, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkcli"]
atlas = ExtResource("2_3axp0")
region = Rect2(2880, 512, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ylsn"]
atlas = ExtResource("2_3axp0")
region = Rect2(0, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc4lm"]
atlas = ExtResource("2_3axp0")
region = Rect2(192, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddmnn"]
atlas = ExtResource("2_3axp0")
region = Rect2(384, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yjih"]
atlas = ExtResource("2_3axp0")
region = Rect2(576, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdp3e"]
atlas = ExtResource("2_3axp0")
region = Rect2(768, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_01irf"]
atlas = ExtResource("2_3axp0")
region = Rect2(960, 0, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcpbx"]
atlas = ExtResource("2_3axp0")
region = Rect2(0, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ovon"]
atlas = ExtResource("2_3axp0")
region = Rect2(192, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbv86"]
atlas = ExtResource("2_3axp0")
region = Rect2(384, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftdmb"]
atlas = ExtResource("2_3axp0")
region = Rect2(576, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nj2q"]
atlas = ExtResource("2_3axp0")
region = Rect2(768, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ouba"]
atlas = ExtResource("2_3axp0")
region = Rect2(960, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dn15"]
atlas = ExtResource("2_3axp0")
region = Rect2(1152, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j5nq"]
atlas = ExtResource("2_3axp0")
region = Rect2(1344, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqe0o"]
atlas = ExtResource("2_3axp0")
region = Rect2(1536, 128, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1sve"]
atlas = ExtResource("2_3axp0")
region = Rect2(1728, 128, 192, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_p64cc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdk3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gu7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk4fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s66oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lr5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2482m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htib0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8rup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydx6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omjrm")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c6t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0b2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xij11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yfwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55c7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ohd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky2f6")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0jr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq4hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l6np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqcv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcxfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsjf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnmjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjf45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x1p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8lgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bye16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdyb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2orsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lklp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv2t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkcli")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ylsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc4lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddmnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yjih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdp3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01irf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcpbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ovon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbv86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftdmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nj2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ouba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dn15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j5nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqe0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1sve")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02o20"]
size = Vector2(72, 81)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1j5w"]
bg_color = Color(0.54509807, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stfsl"]
bg_color = Color(0.30969304, 0.703587, 0.25796613, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mmsfi"]
radius = 47.0
height = 420.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omnws"]
size = Vector2(70, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7mbf"]
size = Vector2(48, 73)

[node name="boss_lvl2" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_i7mbf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p64cc")
animation = &"death"
autoplay = "idle"
frame = 15
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_02o20")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -37.0
offset_top = -52.0
offset_right = 35.0
offset_bottom = -47.0
theme_override_styles/background = SubResource("StyleBoxFlat_m1j5w")
theme_override_styles/fill = SubResource("StyleBoxFlat_stfsl")
show_percentage = false

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_mmsfi")
debug_color = Color(0.851515, 0, 0.3304012, 0.41960785)

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-62, 5.5)
shape = SubResource("RectangleShape2D_omnws")
debug_color = Color(0.22399655, 0.75145656, 0.6385605, 0.41960785)

[node name="BodyHitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyHitbox"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_i7mbf")
debug_color = Color(0.65447843, 0.9406373, 0.424254, 0.41960785)

[node name="WalkSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3axp0")
volume_db = 10.0

[node name="AttackSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xdk3b")
volume_db = 5.0

[node name="DieSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8gu7s")
pitch_scale = 1.2

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yk4fw")
volume_db = 24.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="BodyHitbox" to="." method="_on_body_hitbox_body_entered"]
[connection signal="body_exited" from="BodyHitbox" to="." method="_on_body_hitbox_body_exited"]
